[gd_scene load_steps=16 format=3 uid="uid://73jm5qjy52vq"]

[ext_resource type="Script" path="res://addons/dialogue_manager/default_balloon/default_balloon.gd" id="1_o0e0y"]
[ext_resource type="Texture2D" uid="uid://dm2glf1awue65" path="res://addons/dialogue_manager/default_balloon/menu_border.png" id="2_csdl8"]
[ext_resource type="Gradient" path="res://addons/dialogue_manager/default_balloon/box_gradients.tres" id="3_mv6nh"]
[ext_resource type="Theme" uid="uid://cqv2wo4avmytt" path="res://DefaultTheme.tres" id="4_6q81s"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="5_y7uni"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_reponses_menu.gd" id="6_375v2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy0d5"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
Panel/styles/panel = SubResource("StyleBoxFlat_uy0d5")

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a0odr"]
gradient = ExtResource("3_mv6nh")

[sub_resource type="Animation" id="Animation_2rcpo"]
resource_name = "Close"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8mc7i"]
resource_name = "Open"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ki3wo"]
_data = {
"Close": SubResource("Animation_2rcpo"),
"Open": SubResource("Animation_8mc7i")
}

[node name="DefaultBalloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_o0e0y")

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
theme = SubResource("Theme_qq3yp")

[node name="DialogueBox" type="NinePatchRect" parent="Balloon"]
unique_name_in_owner = true
z_as_relative = false
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -91.5
offset_right = 122.0
offset_bottom = 91.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_csdl8")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Background" type="TextureRect" parent="Balloon/DialogueBox"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_a0odr")

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/DialogueBox"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 12.0
offset_top = 12.0
offset_right = 232.0
offset_bottom = 36.0
mouse_filter = 1
theme = ExtResource("4_6q81s")
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/DialogueBox" instance=ExtResource("5_y7uni")]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
offset_left = 12.0
offset_top = 40.0
offset_right = 13.0
offset_bottom = 304.0
size_flags_vertical = 3
theme = ExtResource("4_6q81s")
text = "Dialogue..."

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon/DialogueBox" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
offset_left = 42.0
offset_top = 95.0
offset_right = 42.0
offset_bottom = 95.0
script = ExtResource("6_375v2")
response_template = NodePath("../../../ResponseTemplate")

[node name="SmallTest" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(256, 48)
offset_left = 343.0
offset_top = 130.0
offset_right = 599.0
offset_bottom = 178.0
mouse_filter = 1
theme = ExtResource("4_6q81s")
bbcode_enabled = true
text = "This is a test."
scroll_active = false

[node name="ResponseTemplate" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(256, 32)
offset_right = 448.0
offset_bottom = 32.0
mouse_filter = 1
theme = ExtResource("4_6q81s")
bbcode_enabled = true
text = "This is a response"
fit_content = true
scroll_active = false

[node name="MediumTest" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(384, 48)
offset_left = 334.0
offset_top = 201.0
offset_right = 718.0
offset_bottom = 249.0
mouse_filter = 1
theme = ExtResource("4_6q81s")
bbcode_enabled = true
text = "This is a medium test."
fit_content = true
scroll_active = false

[node name="LongTest" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(512, 96)
offset_left = 343.0
offset_top = 278.0
offset_right = 855.0
offset_bottom = 374.0
mouse_filter = 1
theme = ExtResource("4_6q81s")
bbcode_enabled = true
text = "This is a test that is long and will wrap lines."
fit_content = true
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ki3wo")
}

[connection signal="response_selected" from="Balloon/DialogueBox/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
